# ctf_snyk

./: .gitignore  Makefile  README.md  justfile  pyproject.toml  requirements.txt
challenges/invisible_ink/: hint.sh  package-lock.json  package.json
challenges/protecting_camp/app/: Dockerfile  flag.txt  index.html  index.js  package-lock.json  package.json
challenges/sauerkraut/: hint.py
challenges/sparky/: HINT.md
challenges/unhackableandy/: hint.py
challenges/yson/: hint.py
