[tool.poetry]
name = "ctf-snyk"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
readme = "README.md"
license = "Unlicense"

[tool.poetry.dependencies]
python = "3.12"
pyyaml = "^6.0.1"
requests = "^2.28.2"
requests-cache = "^1.0.1"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
python-decouple = "^3.8"
playwright = "^1.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
